--- a/RecipeAPI/appsettings.Development.json
+++ b/RecipeAPI/appsettings.Development.json
@@ -4,5 +4,16 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "ExternalDataSourceConfiguration": {
+    "BaseUrl": "https://dummyjson.com/",
+    "RecipesResourceName": "recipes"
+  },
+  "UseSqlite": false,
+  "ConnectionStrings": {
+    "Sqlite": "Data Source=MyDatabase.db",
+    "InMemory": "db"
+  },
+  "DataUpdateThresholdInMinutes": 60
 }
